# booklibrs

./: .gitignore  Cargo.toml  Makefile
_builds/booklibrs_web/: app-403aa3c2a89e86b2.js  app-403aa3c2a89e86b2_bg.wasm  index.html
app/: Cargo.toml  index.html
app/android/app/: build.gradle
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/java/local/booklibrs/: MainActivity.java
app/src/: app.rs  lib.rs  main.rs
docs/: index.html  sw.js
docs/booklibrs_web/: index.html  sw.js
projcore/: Cargo.toml
projcore/src/: lib.rs
projcore/src/data_types/: mod.rs  old_book.rs  old_poem.rs
server/: Cargo.toml
server/src/: main.rs  test.rs
