[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
log.workspace = true
serde.workspace = true
bincode.workspace = true
simple_logger.workspace = true

projcore = { path = "../projcore" }

eframe = { version = "0.29", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
egui = "0.29"

async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
quick-xml = { version = "0.37", features = ["escape-html"] }
scraper = "0.21"

# Fix error from random crate
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1.41", features = ["macros", "rt"] }
wasm-bindgen-futures = "0.4"
web-sys = "0.3" # to access the DOM (to hide the loading text)

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.41", features = ["macros", "rt-multi-thread"] }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14"
jni = "0.21"
egui-winit = "0.29"
ndk-context = "0.1"
thiserror = "2.0"
android-activity = { version = "0.6", features = ["game-activity"] }

[lib]
name = "app"
crate-type = ["cdylib"]